# .github

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  repository-settings.yml
.github/: copilot-instructions.md  dependabot-template.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  repo-request.yml
.github/PULL_REQUEST_TEMPLATE/: repo-request.md
.github/agents/: junior-developer.agent.md  qa-engineer.agent.md  security-officer.agent.md  senior-developer.agent.md
.github/instructions/: docker.instructions.md  python-webapp.instructions.md
.github/workflows/: branch.yml  cron.yml  main.yml  pr.yml  repo.yml  reusable-ansible-lint.yml  reusable-bitwarden-secret-deploy.yml  reusable-bitwarden-secret-rotation.yml  reusable-bitwarden-secret.yml  reusable-cloudflare-hugo.yml  reusable-cloudflare-mkdocs.yml  reusable-codeql.yml  reusable-dependabot-auto.yml  reusable-dependency-track.yml  reusable-docker-build.yml  reusable-flux.yml  (+41 more)
actions/: branch.yml  main.yml
agents/: code-reviewer.md  coding-agent.md  security-analyst.md  technical-writer.md  terraform-reviewer.md
assessments/: numerical_annotation_engine.py
demo/python/: pyproject.toml
demo/python/app/: main.py
demo/python/src/: main.py
demo/python/tests/: test.py  test_calculator.py
docs/: README.md
instructions/: assist-code-review.instructions.md  assist-markdown.instructions.md  assist-security.instructions.md  best-practices-docker.instructions.md  best-practices-github-actions.instructions.md  best-practices-javascript.instructions.md  best-practices-python.instructions.md  git-workflow.instructions.md  guideline-JPL_Coding_Standard_C.instructions.md  makefile.instructions.md  tool-shell.instructions.md
profile/: README.md
renovate/: default.json5
repo-parser/: ..env  main.py  pyproject.toml
repo-parser/app/: config.py  github_api.py  main.py  repo_stats.py
repo-parser/tests/: test_repo.py
repos/: README.md  _template.yml  test-a.yml  test-b.yml  test-c.yml  test.yml
template/: dependabot-template.yml
(+57 files in other folders)
