[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
addopts = "-vvv --maxfail=1 --cov=demo --cov-report=term-missing"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  "build",
  "dist",
]
target-version = "py312"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "C4",
  "D200",
  "D201",
  "D204",
  "D205",
  "D206",
  "D210",
  "D211",
  "D213",
  "D300",
  "D400",
  "D402",
  "D403",
  "D404",
  "D419",
  "E",
  "F",
  "FURB",
  "G010",
  "I",
  "INP001",
  "N805",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PGH004",
  "PGH005",
  "PIE794",
  "PIE796",
  "PIE807",
  "PIE810",
  "PLR",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF015",
  "RUF032",
  "RUF033",
  "RUF034",
  "RUF100",
  "S101",
  "T20",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
files = ["src", "tests"]
strict = "true"
